# cris_spam_bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml
misc/: setting.toml
src/: config.rs  main.rs
