[package]
name = "github_matrix_notifications_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
matrix-sdk = "0.6.2"
octocrab = "0.19.0"
#octocrab = "0.18.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
clap = "4.2.1"

# FIXME: Remove when matrix-sdk dependencies don't pin zeroize 
[patch.crates-io.x25519-dalek]
git = "https://github.com/A6GibKm/x25519-dalek"
rev = "9f19028c34107eea87d37bcee2eb2b350ec34cfe"
