[package]
name = "github_matrix_notifications_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
matrix-sdk = "0.7.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
clap = "4.2.1"
serde_json = "1.0.95"
