[package]
name = "cris_spam_bot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
matrix-sdk = { version = "0.7.1", default-features = false, features = [
	"rustls-tls",
] }
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
clap = { version = "4.2.1", features = ["derive"] }
serde_json = "1.0.95"
tracing = "0.1.40"
